fix(agent): keep rule backgrounds, per-examples tag queries and a reliable cache
- FeatureParser detects outlines by Examples or the feature dialect's
  outline keyword (i18n) and keeps a Rule Background on that Rule's
  scenarios (new ScenarioIndex.ruleBackgroundSteps) instead of merging it
  into the feature Background.
- Knowledge queries evaluate tags per feature+scenario+Examples block,
  features match only through a scenario, and an invalid tag expression
  throws IllegalArgumentException instead of matching nothing.
- Knowledge store: fingerprints scanned before indexing, include modules
  outside the root, apply exclusions below each root only, and are written
  as Jackson JSON with '/' paths. Profile is written first, fingerprints
  last, all via temp file + ATOMIC_MOVE; write failures are logged as
  warnings. status() reports STALE on CACHE_VERSION or SCHEMA_VERSION
  mismatch. CACHE_VERSION 6 persists parseErrors, ruleBackgroundSteps and
  flavor parameterTypes.
- Overview and context skills surface feature parse errors.

Co-Authored-By: Claude <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01A1Q3UkwBgH1A45hCviqudr